--- a/tekwill2021-exemple/public/2.CSS/13. Dimensiunile elementelor/index.html
+++ b/tekwill2021-exemple/public/2.CSS/13. Dimensiunile elementelor/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="element">1</div>
+    <div class="element" id="special">1</div>
     <div class="element">2</div>
     <div class="element">3</div>
     <div class="element">4</div>
@@ -25,7 +25,7 @@
     <div class="element">15</div>
     <div class="element">16</div>
     <div class="element">17</div>
-    <div class="element">18</div>
+    <div class="element" id="special">18</div>
     <div class="element">19</div>
     <div class="element">20</div>
 </body>
