Grid template areas

--- a/tekwill2021-exemple/public/index.html
+++ b/tekwill2021-exemple/public/index.html
@@ -49,6 +49,9 @@
                             <li><a href="2.CSS/11. Border/index.html">Border</a></li>
                             <li><a href="2.CSS/12. Background/index.html">Background</a></li>
                             <li><a href="2.CSS/13. Dimensiunile elementelor/index.html">Dimensiunile elementelor</a></li>
+                            <li><a href="2.CSS/14. Grid/index.html">Grid</a></li>
+                            <li><a href="2.CSS/15. Grid Template Areas/index.html">Grid Template Areas</a></li>
+                            <li><a href="2.CSS/16. Pozitionarea in pagina/index.html">Pozitionarea elementelor in pagina</a></li>
                         </ul>
                     </section>
                 </article>
