--- a/tekwill2021-exemple/public/2.CSS/20. Media queries/index.html
+++ b/tekwill2021-exemple/public/2.CSS/20. Media queries/index.html
@@ -9,13 +9,34 @@
 </head>
 <body>
     <div class="square">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eius possimus natus esse! Ipsam, blanditiis voluptatum soluta iure reiciendis sed enim excepturi consequatur dicta suscipit quas est voluptatibus magnam modi necessitatibus laudantium, recusandae in dolorem? Dolor odit accusamus, adipisci hic omnis tempora architecto atque repudiandae culpa, placeat magnam totam itaque dignissimos saepe quas, iure error a voluptatum! Illum quos placeat dignissimos, ea tenetur debitis sunt? Dignissimos, nesciunt odio facere hic necessitatibus molestias voluptatibus quos dolores quasi nihil iure, quisquam vel. Voluptates distinctio maxime fugiat dolorem delectus est amet aliquam, nesciunt asperiores neque provident voluptatibus labore eum ratione tenetur quos nobis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eaque, reprehenderit debitis quis reiciendis repudiandae fuga facere dolorum libero asperiores, aspernatur minima illum veniam nobis eveniet ad iusto atque provident recusandae quos adipisci? Alias officia saepe perferendis minima inventore laborum odio harum praesentium modi quos omnis, voluptates quia tempore sit ipsa iure sunt culpa id ipsam? Tempora impedit dolores reiciendis aut quas cumque placeat ad eum alias corporis corrupti, obcaecati esse laboriosam. Rerum doloribus error placeat ipsum, vero dolore, corrupti libero est alias dicta deleniti. Inventore veritatis qui culpa iure nulla corporis enim perferendis nihil commodi laudantium quae, est sunt, id, sed pariatur voluptates nesciunt esse earum odit. Fuga eos dolor molestiae, magni velit incidunt quas iste in? Repellendus, nostrum animi necessitatibus facilis magnam beatae mollitia ad commodi quod dolor, nam corporis et quo sed vitae consequatur itaque laborum illum, modi pariatur voluptas ipsa! Quasi sequi quidem natus magni voluptatibus? Saepe sint odio provident doloremque sit eligendi illum, id fugiat sunt enim, libero tempore blanditiis soluta officiis autem in. Voluptates veritatis cupiditate cumque sequi nisi exercitationem molestiae provident accusantium veniam culpa minus, quibusdam a aliquid modi esse dolor tempora voluptate, quae reiciendis impedit officiis temporibus architecto. Alias, cupiditate. Eius laboriosam perferendis dolores corporis eaque voluptatibus? Quas sit adipisci iste, dicta consequatur vel? Magni quidem voluptatum fugit eaque alias tempore, ut, aspernatur vero ratione cum assumenda voluptates accusamus? Et, vitae quaerat nobis perferendis magnam laborum facere est, enim nihil ut debitis quidem consectetur eligendi! Quam, tempore. Eum iste architecto cum dignissimos et repellendus quo! Vero maxime eveniet repellendus, corrupti vel illo modi explicabo totam aliquid doloremque eos tempore fugit laboriosam quam neque amet eaque est error eligendi at, rerum accusantium libero. Quia nobis corporis eius placeat? Modi autem culpa aut! Autem dignissimos similique veniam repellendus praesentium vel nam aperiam eligendi necessitatibus.
     </div>
+
     <div class="row">
-        <div class="cell green">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem rerum, dignissimos consequuntur reprehenderit sit est, porro praesentium vitae aspernatur obcaecati maxime nihil incidunt, at quis ad fuga nulla reiciendis dolorum!</div>
-        <div class="cell yellow">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem rerum, dignissimos consequuntur reprehenderit sit est, porro praesentium vitae aspernatur obcaecati maxime nihil incidunt, at quis ad fuga nulla reiciendis dolorum!</div>
-
-
+        <div class="cell green">
+            <img src="img/stefan.jpeg" alt="">
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea perferendis pariatur sequi beatae quibusdam eligendi obcaecati quas facere commodi nemo inventore, perspiciatis, minus repellendus ad facilis in, labore cum!
+            </span>
+        </div>
+        <div class="cell yellow">
+            <img src="img/stefan.jpeg" alt="">
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea perferendis pariatur sequi beatae quibusdam eligendi obcaecati quas facere commodi nemo inventore, perspiciatis, minus repellendus ad facilis in, labore cum!
+            </span>
+        </div>
+        <div class="cell red">
+            <img src="img/stefan.jpeg" alt="">
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea perferendis pariatur sequi beatae quibusdam eligendi obcaecati quas facere commodi nemo inventore, perspiciatis, minus repellendus ad facilis in, labore cum!
+            </span>
+        </div>
+        <div class="cell violet">
+            <img src="img/stefan.jpeg" alt="">
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea perferendis pariatur sequi beatae quibusdam eligendi obcaecati quas facere commodi nemo inventore, perspiciatis, minus repellendus ad facilis in, labore cum!
+            </span>
+        </div>
     </div>
 </body>
 </html>
